--- a/register.html
+++ b/register.html
@@ -471,7 +471,7 @@
             </div>
 
             <div class="login-link">
-                <a href="login.html">Iniciar sesión</a>
+                <a href="index.html">Iniciar sesión</a>
             </div>
         </div>
     </div>
