--- a/gastos.html
+++ b/gastos.html
@@ -645,8 +645,9 @@
                     <span class="nav-icon">🍽️</span>
                     <span>Pedidos</span>
                 </a>
-                <a href="gastos.html" class="nav-item active">
-                    <span class="nav-icon">💰</span>
+               </a>
+                                <a href="gastos.html" class="nav-item" data-page="pedidos">
+                    <span class="nav-icon">🧾</span>
                     <span>Gastos</span>
                 </a>
             </div>
