--- a/pedidos.html
+++ b/pedidos.html
@@ -777,6 +777,11 @@
                     <span class="nav-icon">🍽️</span>
                     <span>Pedidos</span>
                 </a>
+                               </a>
+                                <a href="gastos.html" class="nav-item" data-page="pedidos">
+                    <span class="nav-icon">🧾</span>
+                    <span>Gastos</span>
+                </a>
             </div>
         </nav>
 
