--- a/productos.html
+++ b/productos.html
@@ -415,6 +415,10 @@
                     <span class="nav-icon">🍽️</span>
                     <span>Pedidos</span>
                 </a>
+                                <a href="gastos.html" class="nav-item" data-page="pedidos">
+                    <span class="nav-icon">🧾</span>
+                    <span>Gastos</span>
+                </a>
             </div>
         </nav>
 
