--- a/gastos.html
+++ b/gastos.html
@@ -650,6 +650,15 @@
                     <span class="nav-icon">🧾</span>
                     <span>Gastos</span>
                 </a>
+
+                                                <a href="qr-generator.html" class="nav-item" data-page="pedidos">
+                    <span class="nav-icon">📱</span>
+                    <span>QR generador</span>
+                </a>
+                <a href="reportes.html" class="nav-item">
+    <span class="nav-icon">📊</span>
+    <span>Reportes</span>
+</a>
             </div>
         </nav>
 
