--- a/qr-generator.html
+++ b/qr-generator.html
@@ -318,6 +318,41 @@
 
     <script>
         let currentQR = null;
+        const API_URL = 'https://restaurante-co77.onrender.com/api';
+        let currentUser = null;
+
+        // Cargar datos del usuario al iniciar
+        window.addEventListener('DOMContentLoaded', async () => {
+            const token = localStorage.getItem('token');
+            if (!token) {
+                window.location.href = 'index.html';
+                return;
+            }
+
+            try {
+                const response = await fetch(`${API_URL}/auth/me`, {
+                    headers: { 'Authorization': `Bearer ${token}` }
+                });
+
+                if (!response.ok) throw new Error('No autorizado');
+
+                const data = await response.json();
+                currentUser = data.data;
+
+                // Auto-rellenar el nombre del restaurante y sede
+                document.getElementById('nombreRestaurante').value = currentUser.nombreRestaurante || '';
+                document.getElementById('sede').value = currentUser.sede || '';
+
+                // Opcional: Deshabilitar estos campos para que no se puedan editar
+                document.getElementById('nombreRestaurante').readOnly = true;
+                document.getElementById('sede').readOnly = true;
+
+            } catch (error) {
+                console.error('Error:', error);
+                localStorage.removeItem('token');
+                window.location.href = 'index.html';
+            }
+        });
 
         document.getElementById('qrForm').addEventListener('submit', function(e) {
             e.preventDefault();
