--- a/qr-generator.html
+++ b/qr-generator.html
@@ -375,7 +375,8 @@
             qrPreview.innerHTML = '';
 
             // Obtener la URL base actual
-            const baseUrl = window.location.origin + window.location.pathname.replace('qr-generator.html', '');
+            const baseUrl = window.location.origin + '/';
+
             
             // Crear URL con parámetros
             const params = new URLSearchParams({
