historial de pedidos

--- a/pedidos.html
+++ b/pedidos.html
@@ -787,10 +787,15 @@
                     <span class="nav-icon">📱</span>
                     <span>QR generador</span>
                 </a>
-                
+
                 <a href="reportes.html" class="nav-item">
     <span class="nav-icon">📊</span>
     <span>Reportes</span>
+</a>
+
+                <a href="historial-pedidos.html" class="nav-item">
+    <span class="nav-icon">📜</span>
+    <span>Historial</span>
 </a>
 
 
