--- a/gastos.html
+++ b/gastos.html
@@ -659,6 +659,12 @@
     <span class="nav-icon">📊</span>
     <span>Reportes</span>
 </a>
+
+                <a href="historial-pedidos.html" class="nav-item">
+    <span class="nav-icon">📜</span>
+    <span>Historial</span>
+</a>
+
             </div>
         </nav>
 
