--- a/productos.html
+++ b/productos.html
@@ -429,6 +429,11 @@
     <span class="nav-icon">📊</span>
     <span>Reportes</span>
 </a>
+
+                <a href="historial-pedidos.html" class="nav-item">
+    <span class="nav-icon">📜</span>
+    <span>Historial</span>
+</a>
             </div>
         </nav>
 
