--- a/productos.html
+++ b/productos.html
@@ -434,6 +434,16 @@
     <span class="nav-icon">📜</span>
     <span>Historial</span>
 </a>
+
+                                <a href="catalogo-productos.html" class="nav-item">
+                    <span class="nav-icon">📜📦</span>
+                    <span>inventario</span>
+                </a>
+
+                                <a href="liquidacion.html" class="nav-item active">
+                    <span class="nav-icon">💵</span>
+                    <span>Liquidación</span>
+                </a>
             </div>
         </nav>
 
