--- a/historial-pedidos.html
+++ b/historial-pedidos.html
@@ -706,6 +706,15 @@
                     <span class="nav-icon">📊</span>
                     <span>Reportes</span>
                 </a>
+                                                <a href="catalogo-productos.html" class="nav-item">
+                    <span class="nav-icon">📜📦</span>
+                    <span>inventario</span>
+                </a>
+
+                <a href="liquidacion.html" class="nav-item active">
+                    <span class="nav-icon">💵</span>
+                    <span>Liquidación</span>
+                </a>
             </div>
         </nav>
 
