--- a/pedidos.html
+++ b/pedidos.html
@@ -798,6 +798,15 @@
     <span>Historial</span>
 </a>
 
+                                <a href="catalogo-productos.html" class="nav-item">
+                    <span class="nav-icon">📜📦</span>
+                    <span>inventario</span>
+                </a>
+
+                                <a href="liquidacion.html" class="nav-item active">
+                    <span class="nav-icon">💵</span>
+                    <span>Liquidación</span>
+                </a>
 
             </div>
         </nav>
