realizar la liquidacion

--- a/historial-pedidos.html
+++ b/historial-pedidos.html
@@ -715,6 +715,10 @@
                     <span class="nav-icon">💵</span>
                     <span>Liquidación</span>
                 </a>
+                                <a href="historial-liquidaciones.html" class="nav-item active">
+                    <span class="nav-icon">📋</span>
+                    <span>Hist. Liquidaciones</span>
+                </a>
             </div>
         </nav>
 
