--- a/liquidacion.html
+++ b/liquidacion.html
@@ -742,6 +742,10 @@
                     <span class="nav-icon">📜📦</span>
                     <span>Inventario</span>
                 </a>
+                                <a href="historial-liquidaciones.html" class="nav-item active">
+                    <span class="nav-icon">📋</span>
+                    <span>Hist. Liquidaciones</span>
+                </a>
             </div>
         </nav>
 
