--- a/catalogo-productos.html
+++ b/catalogo-productos.html
@@ -682,6 +682,10 @@
                     <span class="nav-icon">💵</span>
                     <span>Liquidación</span>
                 </a>
+                                <a href="historial-liquidaciones.html" class="nav-item active">
+                    <span class="nav-icon">📋</span>
+                    <span>Hist. Liquidaciones</span>
+                </a>
             </div>
         </nav>
 
