--- a/gastos.html
+++ b/gastos.html
@@ -673,6 +673,9 @@
                                 <a href="liquidacion.html" class="nav-item active">
                     <span class="nav-icon">💵</span>
                     <span>Liquidación</span>
+                </a>                <a href="historial-liquidaciones.html" class="nav-item active">
+                    <span class="nav-icon">📋</span>
+                    <span>Hist. Liquidaciones</span>
                 </a>
 
             </div>
